# FrostByte

./: .gitignore  README.md
pcb/: frostbyte-pcb.kicad_pcb  frostbyte-pcb.kicad_pro  frostbyte-pcb.kicad_sch
scripts/: writefpga.py
src/: CMakeLists.txt  cmds.c  cmds.h  constants.h  flash.c  flash.h  main.c
